# CodeLanguageLearning

./: .gitignore  README.md
C++/common/: 16bytes_aligned  16bytes_aligned.cc  async_test  async_test.cc  autoAndFuncInferInitializerList  autoAndFuncInferInitializerList.cc  auto_bool_container  auto_bool_container.cc  byte_align.cc  cbegin_in_c11  cbegin_in_c11.cc  class_static_const.cc  const_before_after_diff.cc  decltype_auto_and_func  decltype_auto_and_func.cc  funcPointerTypeAndArrayType  func_pointer_type_and_array_type.cc  func_template_partial_special  func_template_partial_special.cc  initalization_atomic.cc  left_right_var  left_right_var.cc  map_key_value_test  map_key_value_test.cc  multi_cast_test.cc  non_trivial_about  pp_node_test  (+13 more)
CMake/common/include_directories/: CMakeLists.txt
CMake/common/include_directories/include/: utils.h
CMake/common/include_directories/src/: main.cc  utils.cpp
CMake/common/include_directories/world/: CMakeLists.txt
CMake/common/include_directories/world/include/: world.h
CMake/common/include_directories/world/src/: world.cc
Go/: lambda_struct_item.go  regexpPackage.go  slice_and_map.go
Java/: anonymous_class.java  inputstream_recycle.java
JavaTypeScript/: args_kwargs.js  args_kwargs.ts  class_between_java_type.js  class_between_java_type.ts  class_test.js  class_test.ts  for_in_of.js  for_in_of.ts  interface_test.ts  three_strange_symbol.js  three_strange_symbol.ts  type_assert.js  type_assert.ts  unpack_object.js  unpack_object.ts
Python/: property_test.py
int8_quantization/: ncnn_quantization_tools.sh
(+24 files in other folders)
